DRUPSIBLE-235 Fix php_values and php_flags
Signed-off-by: Mariano Barcia <mariano.barcia@gmail.com>

--- a/templates/etc/php/fpm/pool-available.d/pool.conf.j2
+++ b/templates/etc/php/fpm/pool-available.d/pool.conf.j2
@@ -430,13 +430,13 @@ env[{{ key }}] = {{ value }}
 ;php__admin_value[memory_limit] = 32M#}
 {% if item.php__flags is defined and item.php__flags %}
 {% for key, value in item.php__flags.iteritems() %}
-php_flags[{{ key }}] = {{ value }}
+php_flag[{{ key }}] = {{ value }}
 {% endfor %}
 
 {% endif %}
 {% if item.php__values is defined and item.php__values %}
 {% for key, value in item.php__values.iteritems() %}
-php_values[{{ key }}] = {{ value }}
+php_value[{{ key }}] = {{ value }}
 {% endfor %}
 
 {% endif %}
