DRUPSIBLE-235 Fixed template pool.conf.j2.
Signed-off-by: Mariano Barcia <mariano.barcia@gmail.com>

--- a/templates/etc/php/fpm/pool-available.d/pool.conf.j2
+++ b/templates/etc/php/fpm/pool-available.d/pool.conf.j2
@@ -5,6 +5,7 @@
 {% for key, value in item.php__global_values.iteritems() %}
 {{ key }} = {{ value }}
 {% endfor %}
+{% endif %}
 
 {#
 ; Start a new pool named 'www'.
