--- a/templates/etc/php/php.ini.j2
+++ b/templates/etc/php/php.ini.j2
@@ -733,24 +733,14 @@ default_charset = "{{ php__default_charset }}"
 ;output_encoding =
 #}
 
-{% if php__version|version_compare('7', '!=') %}
+{% if php__version|version_compare('7', '<') %}
 {#
 ; Always populate the $HTTP_RAW_POST_DATA variable. PHP's default behavior is
 ; to disable this feature. If post reading is disabled through
 ; enable_post_data_reading, $HTTP_RAW_POST_DATA is *NOT* populated.
 ; http://php.net/always-populate-raw-post-data
-;always_populate_raw_post_data = On
 #}
-{% endif %}
-{% if php__version|version_compare('5.6', '==') %}
-{#
-; Always populate the $HTTP_RAW_POST_DATA variable. PHP's default behavior is
-; to disable this feature and it will be removed in a future version.
-; If post reading is disabled through enable_post_data_reading,
-; $HTTP_RAW_POST_DATA is *NOT* populated.
-; http://php.net/always-populate-raw-post-data
-;always_populate_raw_post_data = -1
-#}
+always_populate_raw_post_data = -1
 {% endif %}
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;
